Refactored message utilities.